fixed redirects, logout, login page not visible when authenticating

--- a/frontend/src/style.css
+++ b/frontend/src/style.css
@@ -4,7 +4,7 @@
 
 .sidebar {
   position: fixed;
-  height: 90vh;
+  height: 93vh;
   overflow-y: auto;
   min-width: 215px;
   max-width: 320px;
